--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Complete Responsive Personal Portfolio Website HTML CSS Javascript | Codehal</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    
+
+   <header class = "header">
+        <a href = "#" class="logo">Sanuka.</a>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skill</a>
+            <a href="#contact">Contact</a>
+        </nav>
+        </header>
+
+        <section class="home" id="home">
+            <div class="home-content">
+                <h1>Hi, I'm<span>Sanuka Sithum</span></h1>
+                <div class="text-animate">
+                    <h3>Frontend Developer</h3>
+                </div>
+                <p>
+                    "Education is not preparation for life; education is life itself." - John Dewey
+                </p>
+
+                <div class="btn-box">
+                    <a href="#" class="btn"> Hire Me</a>
+                    <a href="#" class="btn"> Let's Talk</a>
+
+                </div>    
+
+        </section>
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
