--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="animate" style="--i:3;"></span>
                 </div>
                 <p>
-                    "👋 Hello! I'm Sanuka Sithum, a passionate and creative frontend developer with a keen eye for design and a love for crafting seamless user experiences. I thrive on turning ideas into visually appealing and intuitive interfaces that not only look great but also function flawlessly."
+                    "A Computer Science undergraduate at Eastern University, Sri Lanka. Passionate about turning ideas into code, I've worked on diverse projects, mastering languages. I believe in the power of tech to solve real-world problems. Let's connect and build something amazing together!..."
                     <span class="animate" style="--i:4;"></span>
                 </p>
 
@@ -68,7 +68,7 @@
             <h2 class="heading">About<span> Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
             <div class="about-img">
-                <img src="images/about.jpg" alt="">
+                <img src="images/about.png" alt="">
                 <span class="circle-spin"></span>
                 <span class="animate scroll" style="--i:2;"></span>
             </div>
